syntax = "proto3";
package pb;

//表示目标文件生成的路径, go的包名就是最后的目录名
//目前统一生成到 app/pb 目录下
option go_package = "github.com/olaola-chat/rbp-functor/app/pb";

message AdminVoiceLoverAudio {
  uint64 id = 1;
  uint64 create_time = 2;
  uint32 pub_uid = 3;
  string pub_user_name = 4;
  string broker = 5;
  string resource = 6;
  repeated string covers = 7;
  int32 source = 8;
  string desc = 9;
  string title = 10;
  repeated string labels = 11;
  int32 audit_status = 12;
  uint64 op_uid = 13;
  repeated AdminVoiceLoverAudioEdit edit_dubs = 14;
  repeated AdminVoiceLoverAudioEdit edit_contents = 15;
  repeated AdminVoiceLoverAudioEdit edit_posts = 16;
  repeated AdminVoiceLoverAudioEdit edit_covers = 17;
}

message AdminVoiceLoverAudioEdit {
  uint32 uid = 1;
  string name = 2;
  string avatar = 3;
}

message RespAdminVoiceLoverAudioList {
  repeated AdminVoiceLoverAudio audios = 1;
  int32 total = 2;
}

message RespAdminVoiceLoverAudioDetail {
  AdminVoiceLoverAudio audio = 1;
}

message RespAdminVoiceLoverAudioAuditReason {
  repeated AdminVoiceLoverAudioAuditReason reasons = 1;
}

message AdminVoiceLoverAudioAuditReason {
  uint64 id = 1;
  string reason = 2;
}

message RespAdminVoiceLoverAlbumCreate {
  uint64 id = 1;
}

message AdminVoiceLoverAlbum {
  uint64 id = 1;
  string name = 2;
  string intro = 3;
  string cover = 4;
  uint64 op_uid = 5;
  int32 audio_count = 6;
  uint64 create_time = 7;
}

message RespAdminVoiceLoverAlbumDetail {
  AdminVoiceLoverAlbum album = 1;
}

message RespAdminVoiceLoverAlbumList {
  repeated AdminVoiceLoverAlbum albums = 1;
  int32 total = 2;
}

message AdminVoiceLoverAudioCollect {
  uint64 id = 1;
  string title = 2;
  repeated string labels = 3;
  uint32 pub_uid = 4;
  string pub_user_name = 5;
  repeated AdminVoiceLoverAudioCollectAlbum collects = 6;
  uint64 create_time = 7;
}

message AdminVoiceLoverAudioCollectAlbum {
  uint64 id = 1;
  string name = 2;
}

message RespAdminVoiceLoverAudioCollectList {
  repeated AdminVoiceLoverAudioCollect audios = 1;
  int32 total = 2;
}